release 1.5 (11-2010)

release 1.4 (11-09-2010)
- Fixed issue 431
  https://jersey.dev.java.net/issues/show_bug.cgi?id=431
  The use of @PerSession no longer results in a NotSerializableException when 
  session state is persisted for internal state, associated with resource
  instances, that is stored as a session attribute.
- Fixed issue 554
  https://jersey.dev.java.net/issues/show_bug.cgi?id=554
  Tracing is enabled for the JSP template processor. The JSP name and reference
  to the it variable is output.
- Fixed issue 571
  https://jersey.dev.java.net/issues/show_bug.cgi?id=571
  User defined providers (MessageBodyReaders and Writers) must have higher
  priority than Jersey provided ones (client & server side).
- When ServletContainer.FEATURE_FILTER_FORWARD_ON_404 is enabled
  and the status code is 404 call HttpServletResponse.setStatus otherwise
  call HttpServletResponse.sendError.
- Fixed issue 578
  https://jersey.dev.java.net/issues/show_bug.cgi?id=578
  The async client, when no HTTP async implementation is utilized, uses
  ExecutorService to execute the request/response task.
  The default implementation is Executors.newCachedThreadPool() and the
  implementation can be set on the Client.
- Fixed issue 577
  https://jersey.dev.java.net/issues/show_bug.cgi?id=577
  When a client sends an empty request to a resource method that consumes
  JAXB/JSON the natural and mapped conventions produce inconsistent results and
  should return a 400 error.
- Fixed issue 546
  https://jersey.dev.java.net/issues/show_bug.cgi?id=546
  Validating default values with @DefaultValue of an @*Param at initialization
  time to produce on errors on deployment can be avoided if the StringReader
  is annotated with @StringReader.@ValidateDefaultValue(false). In such cases
  if the default value is incorrect it will result in a runtime error.
- Fixed issue 552
  https://jersey.dev.java.net/issues/show_bug.cgi?id=552